# rmatrix

./: .gitignore  README.md  pyproject.toml  two_channel_P_matrix.npy
docs/: example.ipynb  sammy_example.ipynb  sammy_rm_example.ipynb  versions.md
src/rmatrix/: __init__.py  large_spin_group.py  spin_group.py
src/rmatrix/base/: particles.py
src/rmatrix/channels/: abstract_channel.py  capture_channel.py  elastic_channel.py
tests/: channel_tests.py  import_tests.py  installation_test.py  large_spin_group_tests.py  particle_test.py  sammy_tests.py  spin_group_tests.py
tests/files/: raa.lst  rbb.lst
