[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "rmatrix"
description = "package for solving full R-matrix equations"
readme = "readme.md"
dynamic = ["version"]
dependencies = [
	"numpy"
]

[tool.setuptools.dynamic]
version = {attr="rmatrix.__version__"}


[tools.setuptools.packages.find]
namespaces = true
where = ["src"]

[tool.pytest.ini_options]
markers = [ 
	"slow: marks tests as slow", 
	"local: marks tests that run on local scripts",
	"fishing: marks tests that run over a lot of files to find edge cases",
	"notready: marks tests to skip while developing one aspect"
]
python_files = "tests/*test*.py"
addopts = "-m 'not slow  and not notready and not fishing '"
